# ChangeLog for sys-apps/busybox
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/busybox/ChangeLog,v 1.294 2011/12/31 07:21:06 vapier Exp $

  31 Dec 2011; Mike Frysinger <vapier@gentoo.org> busybox-1.19.3-r1.ebuild:
  Force a recent version of linux-headers #396025 by Robin Johnson.

  28 Dec 2011; Jeroen Roovers <jer@gentoo.org> busybox-1.19.3-r1.ebuild:
  Stable for HPPA (bug #395427).

  26 Dec 2011; Markus Meier <maekke@gentoo.org> busybox-1.19.3-r1.ebuild:
  arm stable, bug #395427

  22 Dec 2011; Agostino Sarubbo <ago@gentoo.org> busybox-1.19.3-r1.ebuild:
  Stable for AMD64, wrt bug #395427

  20 Dec 2011; Mike Frysinger <vapier@gentoo.org> busybox-1.17.4.ebuild,
  busybox-1.18.4.ebuild, busybox-1.18.5.ebuild, busybox-1.19.0.ebuild,
  busybox-1.19.2.ebuild, busybox-1.19.2-r1.ebuild, busybox-1.19.3.ebuild:
  Drop IUSE=+mdev for all ebuilds #395409 by Grzegorz Krzystek.

  20 Dec 2011; Mike Frysinger <vapier@gentoo.org> busybox-1.19.3-r1.ebuild:
  Drop USE=mdev default so it can work with virtual/dev-manager #395319 by
  Walter Dnes.

*busybox-1.19.3-r1 (06 Dec 2011)

  06 Dec 2011; Mike Frysinger <vapier@gentoo.org> +busybox-1.19.3-r1.ebuild,
  +files/busybox-1.19.3-kernel-nfs.patch:
  Add patch from upstream which allows us to mount nfs shares w/out needing
  libtirpc or C library RPC symbols #379481 by Andriy Baranskyy.

*busybox-1.19.3 (07 Nov 2011)

  07 Nov 2011; Mike Frysinger <vapier@gentoo.org> +busybox-1.19.3.ebuild,
  +files/busybox-1.19.3-getty.patch, +files/busybox-1.19.3-modinfo.patch:
  Version bump. Drop USE=debug support #379965 by Agostino Sarubbo.

*busybox-1.19.2-r1 (18 Oct 2011)

  18 Oct 2011; Mike Frysinger <vapier@gentoo.org> +busybox-1.19.2-r1.ebuild,
  +files/busybox-1.19.2-tftp.patch:
  Undo nommu and rebuild config to get all the ash features enabled by default
  #387555 by Ortwin Glueck.

*busybox-1.19.2 (17 Sep 2011)
