@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA512
 
 AUX busybox-1.17.0-bb.patch 1039 RMD160 abd095949a1a5797a770dd84fbdd247490a7420f SHA1 4f3399421c00961f066b65f4f1955363dc9ed746 SHA256 be449a26d5e87431e2192f79f945e3bf0c999873306d40bf9c0d6cc61da08d48
 AUX busybox-1.18.0-bb.patch 918 RMD160 e6a7be911deb07510ddf46b8a4b8b24ef5b1b29a SHA1 f4815f4cd948c300d65e553486c949c780f05752 SHA256 9e713de11f26a07e5a17d7e62eed7a10b163de91331d50541dcc2c037acbcb67
@@ -49,24 +49,14 @@ EBUILD busybox-1.18.5.ebuild 8222 RMD160 2941ecab7ed2d5780a8c61c84dc41879e8adbee
 EBUILD busybox-1.19.0.ebuild 8260 RMD160 d86d248c79d93e643431af04068396855cdf3e61 SHA1 5245a29bbf1125555972947fac56e7ce84576d68 SHA256 1f988c95c5e5b799d02cd73861eb711c3cc64de46484ee1d11f11203343d0cc2
 EBUILD busybox-1.19.2-r1.ebuild 8365 RMD160 9a5672d21dba720eb277971af35be015ec00e294 SHA1 c7af950a4ffd7b0964357a961a0f3d0514477201 SHA256 f352b6eefab0ff34532c28d5c976eb561601c9af24ad33dd1353e86565d46b97
 EBUILD busybox-1.19.2.ebuild 8195 RMD160 aa20483f570ae39ef514e5d9295b9f7532c538be SHA1 dbc77f952a39e54711cbcece5a8c5231c6b1a2c8 SHA256 5a3a0dc2ec430f95e5a5e935dd7848977fd7d25fb8be2ea193104bc4e7829bb2
-EBUILD busybox-1.19.3-r1.ebuild 8373 RMD160 a5818ce4af25dc16df8c54c5fe0926d11d28f4e3 SHA1 9f08f31908a307545d6cbd69edffb15d9c690c2c SHA256 89e95fa5ac5ed5d32fadcf6ddb3261ccde027249288e1b1307fdd706b6fdcdd6
+EBUILD busybox-1.19.3-r1.ebuild 8376 RMD160 a75673a7b285c5c50d0c19475f17ba2acb177789 SHA1 ab614c450e137e5bed2cf68e5dad26568cd76440 SHA256 c21031ae6ff312616af566fd5eeaeeeab61b98e1816cfc280b1db6da0590f523
 EBUILD busybox-1.19.3.ebuild 8413 RMD160 d441f77f30038d4e8b63a1124e133009fba8492f SHA1 c54c0f2ff1f84bb73176a2d5c6275156baa2047d SHA256 69cb8ce0052d5783124a88893030d6914ad8b15ca812ced1adacb0daa8b51926
-MISC ChangeLog 44445 RMD160 500ea1b3ba84bfad833dc45015886ebc0b5cacee SHA1 393940339370c04616b1d97e6aa80a96aa674ddf SHA256 0c129f4f2f72d80555985bb1fd9722e0f5ba04bd9294c777bd50d58d401be826
+MISC ChangeLog 44562 RMD160 24b1771880ca503f1c33d841b1d14bc92d882a1f SHA1 312cc64715e38f46ead54552b238b2e59c507fe7 SHA256 c2287caa383bd8544092019208c05d03e068b89e58f62ad365b86e7adc1e646a
 MISC metadata.xml 420 RMD160 a3d9cd7689418647525460862b05d3adfb9cd4f4 SHA1 c67d73ae61fb0180060ff7d3d13b1b5e9ef2c56c SHA256 1d2b931bd8b4026d665b485a21263438fe5892bf81af7139e409bfd61a68d55c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBAgAGBQJO/rfwAAoJELEHsLL7fEFWhm0P+gPyzylvwQAbeWWcEhzidJVG
-yQHfDP18oqonc6HkFtN6j+sEMGDeE1Ml7LkaAfOhmaWRg3XuQkHyRfH3xhf6PcZA
-n+8jdQVkZ419tf1awZP31DwrjN9s+Hy3x3NPHn5UHqtUQnNwrTX0JnCt510gW4oH
-bXWubnOVT8bqr/q7YD0nMl1kEDYSt+UMoa041Op1b0IPcseK+VL1FPkiz2UdehLv
-oCzYOfq6gc3Iv1H/tpaNdVMLN4BzXAo9nPxe3F4lt0Tnf90m1c+eyTwF/kZH0F89
-cMrDjKCtUzWcjrsFYBLRFO2uzAcjrYGQksTj0UMOnoptzFTlR6fjkQiKLaNauFCO
-DThejJX+rgObzpVklvdeEbVHKT9LJ++W4gQwVbAKs0ybge7Vp9EdIZk3/wQlopGX
-yb8GwUpQZwg1VGK1mirTBmvEkAwDgFRHfS4yMnLPOKCca1maJqbSRa6C101m3xNb
-J7XRZcks98858XRbgSHXYhVPWKlpAph0GP7h6FSr1lPjk4Esn+7myVcuWGP/Gd8e
-t3URib09VP+y7jbLr1e7WRFbC9e6vmf1pfwx4NBgUTArnxCrWSOwNybn9+ynWV2L
-a4sR1m8T2H+cor2dXFrPrcs1Z7Wt0IiuQMilgryV7JB5ssBT7a8y/Ps67Yq+dhCm
-cnen0S3O3PnlwyLpWJns
-=6SZ7
+iEYEAREKAAYFAk8EkJwACgkQuUQtlDBCeQKOdQCePhMVjGTBWek5VXVCf1pYbtsY
+6fUAn3wrACq5jMhpHg3nvUOu7Lf6JCcU
+=JJsQ
 -----END PGP SIGNATURE-----
