@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX mlocate-cron.conf 237 RMD160 9cf92cb5bd0071f75b644fc336697176f71cabea SHA1 bf712392e377686d4d11c144e188eb09499bef59 SHA256 856c1ab465b3e7ffdf752ba323bea9867ac902297fc4247ae15a575419b279c7
 AUX mlocate.cron-r2 1297 RMD160 79d86867c404c8dab046fab303de38485e06bab8 SHA1 94ec03d743758c55dc9551b16e6f74e3365c5a79 SHA256 dfceec061a018f2976f18b8ba874dc152cd9ee4595a6f9a25a6ef5307aeacae9
@@ -7,13 +7,13 @@ AUX updatedb.conf 967 RMD160 5b6dd3fe1ed0ab872608859fdedf40d69b706b53 SHA1 12e95
 DIST mlocate-0.23.1.tar.xz 347960 RMD160 d124b2f67a1a6ad1731cc3414febd8429228c88d SHA1 1c8d10a6ae8185b8e7c88091d383563650e69ece SHA256 cec92e2fd946f14d236d5e85570bddb5c487b3e1d8a6f1a2691bb1f07d696ff7
 DIST mlocate-0.24.tar.xz 353948 RMD160 4ddb5e95d9a324fcb5574db9c3836f3f9b30dffa SHA1 7beb0572c9cfdef0db3e2f34cd71c616344e2d53 SHA256 5787bee846735e21ff57df9e345d5db73d684d2cea9efc0f387462ccfbc6796f
 EBUILD mlocate-0.23.1-r1.ebuild 1628 RMD160 a84b8dd079fc904c28d6fd3009386d00d0e56bab SHA1 f8a7d47f7508e2798a4c8f7fba6867a8aae0e89a SHA256 e84ae2164b5ba1dac0e40c47584e46ad205542a23b7e0b9c0cce8852d8e725e3
-EBUILD mlocate-0.24.ebuild 1717 RMD160 a22a62effff43801c17986dae6547ec107be6d0e SHA1 01ec2bfc809e9723732ba7c9eb5503fe0dfda65f SHA256 6f9eeb6b6532d91c899029ee5bd0f7d45fdb3fc5ac2ebb0f93bdbfd99415a1bd
-MISC ChangeLog 11469 RMD160 f7a13ad0e44e901ff9b2bcf7a920d376a88fcf37 SHA1 f4d196981126d61f28b74cb3ab52bce67b97cb2a SHA256 cd56f076b59b97c25031eb6380c43f4da9cf100cb9767704e93ed15dedd4f388
+EBUILD mlocate-0.24.ebuild 1723 RMD160 be9550b4fdae70d5e2dedc6444f0ef551f31b1d0 SHA1 77090cdd9de4ff9b38131ed0afb4174ae1d5373e SHA256 8c7cebd36d482342ef08cd75ae34c7b613a2d2418a25a4b30014d50b8e941491
+MISC ChangeLog 11582 RMD160 fe3ec979dff64714be5e40dfadf920e5074700a3 SHA1 173419b5f9fd252d277556ca534bcfab14b5b992 SHA256 758947fdf8e3d8ec9afe705be179c3c3120e9999f9d8dd7cef8d32b7a2d71bb0
 MISC metadata.xml 269 RMD160 1db2638dff49f3fd7ca729da3e275c5a21019b1f SHA1 a02ae3c5cdfde4f63a1370a7c334d9e72c4887fd SHA256 76fb556342434f4a8ba872bc6dbb7a21f625b5fbd001ee467141d6b710ae82c6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk77e1EACgkQknrdDGLu8JANHQD+Lc5EXaPhnlXg2dO8nY5rVFdj
-naizaX72dG9z09Yhv4oA/1q/Silasc+HCma9elHfPIzI+d/qIfufAirUcVmRyGZj
-=ncg+
+iEYEAREKAAYFAk8EkO0ACgkQuUQtlDBCeQKdPwCfVOOp3Q7DhBIO6jCRu/CK4pVl
+GE4An09eK55N85ijdWAXftl5qVyfvhZ4
+=oJcz
 -----END PGP SIGNATURE-----
