@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/busybox
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/busybox/ChangeLog,v 1.294 2011/12/31 07:21:06 vapier Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/busybox/ChangeLog,v 1.295 2012/01/04 17:47:01 phajdan.jr Exp $
+
+  04 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  busybox-1.19.3-r1.ebuild:
+  x86 stable wrt bug #395427
 
   31 Dec 2011; Mike Frysinger <vapier@gentoo.org> busybox-1.19.3-r1.ebuild:
   Force a recent version of linux-headers #396025 by Robin Johnson.
